--- a/jspractice/.classpath
+++ b/jspractice/.classpath
@@ -13,5 +13,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/activemq-all-5.14.3.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
